# PokeFinder

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  MainTest.cpp  Makefile  PokeFinder.mk  PokeFinder.pro  PokeFinder.project  PokeFinder.sln  PokeFinder.txt  PokeFinder.vcxproj  PokeFinder.vcxproj.filters  PokeFinder.workspace  README.md  appicon.rc  appveyor.yml  embed.py  flake.nix  images.qrc  main.cpp  mainwindow.h  mainwindow.ui  resources.qrc  translations.qrc  win_resources.rc  wxcrafter.wxcp  wxcrafter_bitmaps.cpp
Core/: CMakeLists.txt  Global.hpp  Translator.cpp  Translator.hpp
Core/Enum/: Buttons.hpp  DSType.hpp  Encounter.hpp  Game.hpp  Game_BASE_1107.hpp  Item.hpp  ItemEffect.hpp  Language.hpp  Lead.hpp  Method.hpp
Core/Gen3/: Egg3.cpp  Egg3.hpp  EncounterArea3.cpp  EncounterArea3.hpp  Encounters3.cpp  Encounters3.hpp  Frame3.cpp  Frame3.hpp  FrameGen3.cpp  FrameGen3.hpp  GameCubeRTCSearcher.cpp  GameCubeRTCSearcher.hpp  GameCubeSeedSearcher.cpp  GameCubeSeedSearcher.hpp  Generator3.cpp  Generator3.hpp  GeneratorGen3.cpp  GeneratorGen3.hpp  IVSearcher3.cpp  IVSearcher3.hpp  LockInfo.cpp  LockInfo.hpp  NatureLock.cpp  NatureLock.hpp  Profile3.cpp  Profile3.hpp  ProfileGen3.cpp  ProfileGen3.hpp  ProfileLoader3.cpp  ProfileLoader3.hpp  Searcher3.cpp  Searcher3.hpp  SearcherGen3.cpp  SearcherGen3.hpp  ShadowLock.cpp  ShadowLock.hpp  ShadowTemplate.hpp  StationaryGen3.cpp  StationaryGen3.hpp
Core/Gen4/: ChainedSIDCalc.cpp  ChainedSIDCalc.hpp  Egg4.cpp  Egg4.hpp  EggSearcher4.cpp  EggSearcher4.hpp  EncounterArea4.cpp  EncounterArea4.hpp  Encounters4.cpp  Encounters4.hpp  Frame4.cpp  Frame4.hpp  Generator4.cpp  Generator4.hpp  HGSSRoamer.cpp  HGSSRoamer.hpp  IDSearcher4.cpp  IDSearcher4.hpp  IVSearcher4.cpp  IVSearcher4.hpp  Profile4.cpp  Profile4.hpp  ProfileLoader4.cpp  ProfileLoader4.hpp  Searcher4.cpp  Searcher4.hpp  SeedTime.cpp  SeedTime.hpp  SeedTime4.cpp  StaticTemplate4.hpp
Core/Gen5/: DSType.hpp  DreamRadarTemplate.hpp  EncounterArea5.cpp  EncounterArea5.hpp  Encounters5.cpp  Encounters5.hpp  Frame5.cpp  Frame5.hpp  Generator5.cpp  Generator5.hpp  HiddenGrottoArea.cpp  HiddenGrottoArea.hpp  IVCache.cpp  IVCache.hpp  IVSeedCache.hpp  Keypresses.cpp  Keypresses.hpp  Nazos.cpp  Nazos.hpp  PGF.cpp  PGF.hpp  PhenomenonArea.cpp  PhenomenonArea.hpp  Profile5.cpp  Profile5.hpp  ProfileLoader5.cpp  ProfileLoader5.hpp  SHA1Cache.cpp  SHA1Cache.hpp  StaticTemplate5.hpp  StepEncounter.hpp
Core/Gen8/: Den.hpp  EncounterArea8.cpp  EncounterArea8.hpp  Encounters8.cpp  Encounters8.hpp  Profile8.hpp  Raid.hpp  UndergroundArea.cpp  WB8.hpp
Core/Objects/: DSType.hpp  Egg.cpp  Egg.hpp  Encounter.hpp  EncounterArea.cpp  EncounterArea.hpp  EncounterSlot.cpp  EncounterSlot.hpp  Frame.cpp  Frame.hpp  FrameCompare.cpp  FrameCompare.hpp  Game.hpp  Generator.cpp  Generator.hpp  Language.hpp  Lead.hpp  MTRNG.cpp  Method.hpp  Nature.cpp  Nature.hpp  NatureLock.cpp  NatureLock.hpp  Pokemon.hpp  Power.cpp  Power.hpp  Profile.cpp  Profile.hpp  ProfileManager.hpp  SFMT.cpp  Searcher.cpp  Searcher.hpp  Utilities.cpp  Utilities.hpp
Core/Parents/: Daycare.cpp  Daycare.hpp  Egg.cpp  Egg.hpp  EncounterArea.cpp  EncounterArea.hpp  Frame.cpp  Frame.hpp  FrameCompare.cpp  FrameCompare.hpp  Generator.cpp  Generator.hpp  PersonalInfo.cpp  PersonalInfo.hpp  PersonalLoader.cpp  PersonalLoader.hpp  Pokemon.cpp  Pokemon.hpp  Profile.cpp  Profile.hpp  ProfileLoader.cpp  ProfileLoader.hpp  Searcher.cpp  Searcher.hpp  Slot.cpp  Slot.hpp  StaticTemplate.hpp
Core/RNG/: IRNG.hpp  IRNG64.hpp  Jump.cpp  Jump.hpp  LCRNG.cpp  LCRNG.hpp  LCRNG64.cpp  LCRNG64.hpp  LCRNGReverse.cpp  LCRNGReverse.hpp  MT.cpp  MT.hpp  MTFast.hpp  MTJump.txt  MTRNG.cpp  MTRNG.hpp  RNGCache.cpp  RNGCache.hpp  RNGEuclidean.cpp  RNGEuclidean.hpp  RNGList.hpp  SFMT.cpp  SFMT.hpp  SHA1.cpp  SHA1.hpp  SIMD.hpp  TinyMT.cpp  TinyMT.hpp  Xoroshiro.cpp  Xorshift.cpp  Xorshift.hpp
Core/Resources/: I18n.hpp  Resources.hpp  embed.py
Core/Text/: species_de.txt  species_es.txt  species_fr.txt  species_ja.txt  species_ko.txt
Core/Util/: AdvanceFinderLogic.cpp  AdvanceFinderLogic.hpp  AdvanceSearcher.cpp  AdvanceSearcher.hpp  Characteristic.cpp  Characteristic.hpp  DateTime.cpp  DateTime.hpp  Encounter.hpp  EncounterSlot.cpp  EncounterSlot.hpp  Game.hpp  Global.hpp  IVChecker.cpp  IVChecker.hpp  IVToPIDCalculator.cpp  Language.hpp  Lead.hpp  Method.hpp  Nature.cpp  Nature.hpp  Power.cpp  Power.hpp  ResearcherFrame.cpp  ResearcherFrame.hpp  ShadowType.hpp  TableUtility.cpp  TableUtility.hpp  Translator.cpp  Translator.hpp  Utilities.cpp  Utilities.hpp
Source/: CMakeLists.txt  main.cpp  pokefinder.icns
Source/Core/: CMakeLists.txt  Global.hpp
Source/Form/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  io.github.admiral_fish.pokefinder.appdata.xml  io.github.admiral_fish.pokefinder.desktop  main.cpp  resources.qrc  version.h.in
Source/Forms/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  appicon.rc  main.cpp  version.h.in
Source/Model/: CMakeLists.txt  ProxyModel.hpp  TableModel.hpp
Source/Test/: CMakeLists.txt  Data.cpp  Data.hpp  data.qrc  enum_map.py  main.cpp
Source/Tests/: CMakeLists.txt  main.cpp
Test/: CMakeLists.txt  Data.cpp  Data.hpp  data.qrc  enum_map.py  main.cpp
Test/Gen3/: EggGenerator3Test.cpp  GameCubeGeneratorTest.cpp  GameCubeGeneratorTest.hpp  GameCubeSearcherTest.cpp  GameCubeSearcherTest.hpp  IDGenerator3Test.cpp  IDGenerator3Test.hpp  JirachiPatternTest.cpp  PIDToIVCalculatorTest.cpp  PokeSpotGeneratorTest.cpp  SeedToTimeCalculator3Test.cpp  StaticGenerator3Test.cpp  StaticGenerator3Test.hpp  StaticSearcher3Test.cpp  StaticSearcher3Test.hpp  WildGenerator3Test.cpp  WildGenerator3Test.hpp  WildSearcher3Test.cpp  WildSearcher3Test.hpp  gamecube.json  jirachipattern.json  pidtoivcalculator.json  seedtotime3.json  static3.json  wild3.json
Test/Gen4/: EggGenerator4Test.cpp  IDGenerator4Test.cpp  IDSearcher4Test.cpp  IDSearcher4Test.hpp  SeedToTimeCalculator4Test.cpp  SeedToTimeCalculator4Test.hpp  StaticGenerator4Test.cpp  (+6 more)
(+2368 files in other folders)
